# pylings

./: .gitignore  README.md  install.sh  pbar.py  pyproject.toml  setup.py  watchdog_main.py
exercises/functions/: functions_1.py  functions_2.py
exercises/intro/: add_numbers_2.py  dummy_1.py
src/: config.py  handler.py  learning_path.py  learning_path.yaml  main.py  pbar.py  printer.py  watchdog.py  watcher.py
tests/: test_add_numbers_2.py  test_dummy_1.py
tests/functions/: test_functions_1.py  test_functions_2.py
tests/intro/: test_add_numbers_2.py  test_dummy_1.py
