[tool.poetry]
name = "pylings"
version = "0.1.0"
description = ""
authors = ["Alessio Izzo <alessio.izzo86@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
watchdog = "^2.2.1"
pytest = "^7.2.1"
pyyaml = "^6.0"
pyfiglet = "0.7"
tqdm = "^4.64.1"

[tool.poetry.scripts]
pylings = "src.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
